# well-plate-generator

./: .gitignore  404.html  CMakeLists.txt  README.md  TODO.md  conanfile.txt  index.html
.github/workflows/: documentation-site.yml
command-line-usage/: index.html
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/command-line-usage/: index.md
docs/docs/implementation-notes/: index.md  internals.md  maths.md
docs/docs/template-file/: format.md  index.md  plate-examples.md
implementation-notes/: index.html
implementation-notes/internals/: index.html
implementation-notes/maths/: index.html
search/: search_index.json
src/: main.cpp
src/fuzzer/: fuzzer.cpp  fuzzer.hpp
src/io/: exporter.cpp  exporter.hpp
src/template/: factory.cpp  factory.h  parser.cpp  parser.hpp  template.cpp  template.h  template.hpp
src/util/: uuid.cpp  uuid.hpp
template-file/: index.html
template-file/format/: index.html
template-file/plate-examples/: index.html
templates/: example-2.tplx  example.tplx
test/: CMakeLists.txt  ExampleTest.cpp
